introduction wording change

--- a/Introduction.html
+++ b/Introduction.html
@@ -27,7 +27,7 @@
 
     <style>
       html {
-        background: url("img/037.jpg") no-repeat center center fixed;
+        background: url("img/2018 bike background.jpg") no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -102,12 +102,11 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          Over the years I have raced quite a few 'modern bikes' but as time went by, I became reluctant to pursue a relentless story of basic refinement. 
-          I think in the 60's and 70's the onus was on the owner to develop their own machine to get the edge over the competitor. These days
-          it's reasonable to assume the factories know best and the individual has little options or parts that money can buy to yield improvements.<br>
-          How do we know for sure that a conventional motorbike geometry gives the best all round performance, it would seem odd that seemingly having tried all
-          possible alternatives that the very first basic layout was the best? <br>
-          There are plenty of good examples of successful home built prototypes across the world; most of which remain out of the spotlight of the media. Experimental parts would be a risk but the hope of the underdog beating convention is exciting.<br>
+          The knowledge and technology manufacturers have at their disposal today have deterred a lot of enthusiasts off from attempting to find a better way. Through my young eyes, the challenge seemed somewhat more in reach just 20-30 years ago.  
+          The performance you can buy straight out of the showroom is ample for even the best road racers.<br>
+          My aim is not to make the same but better; it is not without it's challenges but to do so requires large finance. I am hopeful that through experimentation in the unconventional will introduce new approaches to the basic principals.
+          <br>
+          There are plenty of good examples of successful home built prototypes across the world; most of which remain out of the spotlight of the media. Experimental parts would be a risk but the hope of the underdog challenging convention is exciting.<br>
           All components has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, forming, vacuum infusion, clay moulding or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are my own work; right from the oil pump to the fairings. Some components only see minutes of use, only to be stored in wake of new improved designs.
           <div class="image-right-container" width="350px">
@@ -120,10 +119,8 @@
         </div>
         <div class="grid-left-two">
           <h2>The business</h2>
-          I ran an engine tuning workshop and sub contracted as an engineer to make up a busy 7 day working week. In that time I took the bike in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
-          Isle of Man amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the bike. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying
-          in the helicopter on the way Nobles hospital I decided that I was done with modern racing. 
-		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
+          In my mid twenties I ran a small engine tuning workshop and sub contracted as an engineer to make up a busy 7 day working week.
+		  I came to learn that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
           Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day on what I already knew; I would look like it! I wouldn’t learn how to
           design and build a chassis. I see no point in making what others can make better with more finance. That's a guaranteed 2nd place for sure. Money can't buy innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
           
