hrc head images

--- a/Sales.html
+++ b/Sales.html
@@ -154,26 +154,41 @@
 	  The cam sprockets are interchangable between front and rear cams and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
 			   <div class="banner">
 			<div class="banner2">
-			<a target="_blank" href="img/hrcheads2.jpg">
-			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
+			<a target="_blank" href="img/HRC_Kit_heads.jpg">
+			<img src="img/HRC_Kit_heads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
 			<span class="image-text-banner">HRC kit cylinder heads</span>
 			</div>
            <div class="banner2">
-			<a target="_blank" href="img/hrcheads2.jpg">
-			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
+			<a target="_blank" href="img/head_1.jpg">
+			<img src="img/head_1.jpg" class="category-banner" alt="HRC cylinder heads"></a>
+			<span class="image-text-banner">HRC heads</span>
+			</div>
+           <div class="banner2">
+			<a target="_blank" href="img/head_2.jpg">
+			<img src="img/head_2.jpg" class="category-banner" alt="HRC cylinder heads"></a>
 			<span class="image-text-banner">HRC kit cylinder heads</span>
 			</div>
            <div class="banner2">
-			<a target="_blank" href="img/hrcheads2.jpg">
-			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
-			<span class="image-text-banner">HRC springs</span>
-			</div>
-           <div class="banner2">
-			<a target="_blank" href="img/hrcheads2.jpg">
-			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
+			<a target="_blank" href="img/HRC_kit_cams2.jpg">
+			<img src="img/HRC_kit_cams2.jpg" class="category-banner" alt="HRC cylinder heads"></a>
 			<span class="image-text-banner">HRC camshafts</span>
 			</div>
            <div class="banner2">
+			<a target="_blank" href="img/HRC_kit_cams.jpg">
+			<img src="img/HRC_kit_cams.jpg" class="category-banner" alt="Dyno"></a>
+			<span class="image-text-banner">HRC camshafts</span>
+			</div>
+           <div class="banner2">
+			<a target="_blank" href="img/valves_in_head.jpg">
+			<img src="img/valves_in_head.jpg" class="category-banner" alt="Dyno"></a>
+			<span class="image-text-banner">W4 valves</span>
+			</div>
+           <div class="banner2">
+			<a target="_blank" href="img/HRC_springs.jpg">
+			<img src="img/HRC_springs.jpg" class="category-banner" alt="Dyno"></a>
+			<span class="image-text-banner">HRC Kit springs</span>
+			</div>
+           div class="banner2">
 			<a target="_blank" href="img/936ccdyno.jpg">
 			<img src="img/936ccdyno.jpg" class="category-banner" alt="Dyno"></a>
 			<span class="image-text-banner">Dyno report for these heads and Cams</span>
@@ -187,8 +202,8 @@
 		The springs are in immaculate condition; all measuring to new sizes.
 			<div class="banner">
 			<div class="banner2">
-			<a target="_blank" href="img/valve_springs2.jpg">
-			<img src="img/valve_springs2.jpg" class="category-banner" alt="long stroke crank"></a>
+			<a target="_blank" href="img/HRC_springs.jpg">
+			<img src="img/HRC_springs.jpg" class="category-banner" alt="HRC Kit valve springs"></a>
 			<span class="image-text-banner">Valve Springs</span>
 			</div>
 		    </div>
