sales pic update

--- a/Sales.html
+++ b/Sales.html
@@ -188,7 +188,7 @@
 			<img src="img/HRC_springs.jpg" class="category-banner" alt="Dyno"></a>
 			<span class="image-text-banner">HRC Kit springs</span>
 			</div>
-           div class="banner2">
+           <div class="banner2">
 			<a target="_blank" href="img/936ccdyno.jpg">
 			<img src="img/936ccdyno.jpg" class="category-banner" alt="Dyno"></a>
 			<span class="image-text-banner">Dyno report for these heads and Cams</span>
