conatct and policy added

--- a/Sales.html
+++ b/Sales.html
@@ -150,7 +150,7 @@
 	  Exhaust: 8.5mm <br />
 	  Inlet: 9.5mm <br />
         I do have a good set of factory flat faced race valves as an optional extra for £250 to fit these heads.
-	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has higher lift than standard
+	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has higher lift than standard. <br>
 	  The cam sprockets are interchangable between front and rear cams and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
 			   <div class="banner">
 			<div class="banner2">
