--- a/Contact.html
+++ b/Contact.html
@@ -213,7 +213,13 @@
     </div>
       </div>
   <div class="grid-wide-center">
+    <li id="nav-data" class="">
+      <a href="./policy.html">Privacy Policy</a>
+            </li>
+        </div>
+  <div class="grid-wide-center">
     <h6>Photo courtesy of Dave Kneen Photography</h6>
   </div>
+  
 </body>
 </html>
