--- a/Electrics.html
+++ b/Electrics.html
@@ -116,8 +116,8 @@
 			
 	  		<div class="image-left-container" width="360px">
 			<div class="banner4">
-			<a target="_blank" href="img/3d_fuelmap.jpg">
-          <img src="img/3d_fuelmap.jpg" class="category-banner" alt="exhaust can"></a>
+			<a target="_blank" href="img/3dfuelmap.jpg">
+          <img src="img/3dfuelmap.jpg" class="category-banner" alt="3D fuel map"></a>
           <span class="image-text-banner">A 3D representation of injector opening over RPM</span>
             </div>
 			</div>
@@ -134,11 +134,11 @@
         I lost a freshly built engine to one dyno operator who held the motor on a wide open throttle against a fully braked roller.<br>
         From that moment I had to find a more accesible alternative. My solution was a micro data station and logger which would give me everthing on one readout.
         Live Lambda, pressures, temperatures, rpm all on a bright OLED screen; that way I can see exactly what's happening and make changes accordingly.
-        Programming the chips was alien to me and I had massive help from a friend who
+        Programming the chips was alien to me and I had massive help from a friend who did 99% of the head work; I am still learning how to take the lead on that one.
       <div class="image-right-container" width="360px">
 	  <div class="banner3">
-          <a target="_blank" href="img/Ecu&display.jpg">
-		  <img src="img/Ecu&display.jpg" class="category-banner" alt="Ecu and display with logger"></a>
+          <a target="_blank" href="img/ecuanddisplay.jpg">
+		  <img src="img/ecuanddisplay.jpg" class="category-banner" alt="Ecu and display with logger"></a>
           <span class="image-text-banner">Ecu and display with logger</span>
 		  </div>
 	  	  </div>
@@ -153,17 +153,17 @@
         The position at which the injector is fired is less critical but definately necessary; you need to have an appreciation of the dwell, air flow velocity and fuel atomisation in
         order to govern how far in advance of top dead centre the fuel must be dispensed so that it neither hits the back of valve, or at worst; fall out of suspension onto the port walls.
        </div>
-      <div class="grid-right-three">
+      <div class="grid-left-three">
         <h2 align="left"> Charging</h2>
-		<div class="image-right-container" width="290px">
+		<div class="image-left-container" width="290px">
 		<div class="banner4">
 		<a target="_blank" href="img/3 phase alternator.jpg">
-		<img src="img/3 phase alternator.jpg" class="category-banner" alt="exhaust pipes"></a>
+		<img src="img/3 phase alternator.jpg" class="category-banner" alt="3 phase alternator"></a>
           <span class="image-text-banner">3 phase generator and billet engine cover</span>
 		  </div>
 		  </div>
         I made a simple 3 phase generator to make use of the quieter nights in front of the TV, relentlessly wrapping coil after coil. The output is fairly modest
-        due to the low surface area of magnets on the inner rotor. My next move is to look at creating an overun to the flywheel to maintain inertia on decelleration and therefore
+        due to the low surface area of magnets on the inner rotor. My next move is to look at creating an overun to the flywheel to maintain inertia on deceleration and therefore
         keep the charge up for free. There will of course be losses to friction of the sprag clutch.
 	  </div>
 	  <div class="grid-wide-center">
