--- a/Techjournals.html
+++ b/Techjournals.html
@@ -66,6 +66,7 @@
                 <a href="./Aero.html">Aero</a>
                 <a href="./Cooling.html">Cooling</a>
                 <a href="./exhausts.html">Exhausts</a>
+                <a href="./Electrics.html">Electrics</a>
 				</div>
             </li>
             <li id="nav-data" class="">
@@ -114,6 +115,9 @@
         <div class="support-link">
           <a href="./exhausts.html">Exhausts</a>
         </div>
+        <div class="support-link">
+        <a href="./Electrics.html">Electrics</a>
+          </div>
 		     </div>
     </div>
     <div id="footer-background">
