--- a/Events.html
+++ b/Events.html
@@ -72,6 +72,7 @@
             <a href="./Aero.html">Aero</a>
             <a href="./Cooling.html">Cooling</a>
             <a href="./exhausts.html">Exhausts</a>
+            <a href="./Electrics.html">Electrics</a>
 			</div>
 			</li>
 			<li id="nav-data" class="">
