--- a/Sales.html
+++ b/Sales.html
@@ -126,14 +126,29 @@
         The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons. Naturally, it is always advised to check your deck height to ensure safe clearances.
 			<div class="banner">
 			<div class="banner2">
-			<a target="_blank" href="img/52mmcrank2.jpg">
-			<img src="img/52mmcrank.jpg" class="category-banner" alt="long stroke crank"></a>
+			<a target="_blank" href="img/crank.jpg">
+			<img src="img/crank.jpg" class="category-banner" alt="long stroke crank"></a>
 			<span class="image-text-banner">Long stroke crankshaft</span>
 			</div>
         <div class="banner2">
-			<a target="_blank" href="img/conrods.jpg">
-			<img src="img/conrods.jpg" class="category-banner" alt="conrods"></a>
+			<a target="_blank" href="img/crankweb.jpg">
+			<img src="img/crankweb.jpg" class="category-banner" alt="counterweights"></a>
+			<span class="image-text-banner">Crankshaft web and counterweights</span>
+			</div>
+        <div class="banner2">
+			<a target="_blank" href="img/rods.jpg">
+			<img src="img/rods.jpg" class="category-banner" alt="conrods"></a>
 			<span class="image-text-banner">Carrillo conrods</span>
+			</div>
+        <div class="banner2">
+			<a target="_blank" href="img/rods2.jpg">
+			<img src="img/rods2.jpg" class="category-banner" alt="conrods closeup"></a>
+			<span class="image-text-banner">Carrillo conrods closeup</span>
+			</div>
+        <div class="banner2">
+			<a target="_blank" href="img/journals.jpg">
+			<img src="img/journals.jpg" class="category-banner" alt="crankshaft journal"></a>
+			<span class="image-text-banner">Crankshaft jounral</span>
 			</div>
 		    </div>
 			</div>
