chassis and engine pictures2

--- a/Chassis.html
+++ b/Chassis.html
@@ -145,9 +145,9 @@
 		<span class="image-text-banner">Experimental shock and steering linkages</span>
 		</div>
       <div class="banner3">
-		 <a target="_blank" href="img/Front shock proto linkages.jpg">
-		  <img src="img/Front shock proto linkages.jpg" class="category-banner" alt="Front linkages"></a>
-		<span class="image-text-banner">Two front shock rocker arms tp alter wheel rate (Spot which was made the night before a race)</span>
+		 <a target="_blank" href="img/Frontshockprotolinkages.jpg">
+		  <img src="img/Frontshockproto linkages.jpg" class="category-banner" alt="Front linkages"></a>
+		<span class="image-text-banner">Two front shock rocker arms to alter wheel rate (Spot which was made the night before a race)</span>
 		</div>
 		 </div>
         The double wishbone design might seem familiar to a lot of enthusiasts from first glance; it is not novel by appearance but only in it’s true geometry does it differ from any other. I did not compare or measure any other system to produce mine. The lever ratio, wishbone lengths and positions, wheel rate, rake and trail are all just positions I chose purely based on what I thought would be right. Many paper, cardboard and wooden models helped. I checked the numbers after I rode it for a year to see how it compared to others and found some interesting differences. The key was I didn’t want to be steered (quite literally) in a direction based on what others had produced. I needed a fresh slate.<br>
