--- a/Gallery.html
+++ b/Gallery.html
@@ -334,7 +334,17 @@
 			<img src="img/hub1.jpg" alt="eccentric hub"></a>
 			<span class="desc">Large diameter eccentric hub</span>
 			</div>
-			<div class="gallery">
+       <div class="gallery">
+			<a target="_blank" href="img/completeswingarm.jpg">
+			<img src="img/completeswingarm.jpg" alt="Swingarm complete"></a>
+			<span class="desc">Swingarm Complete</span>
+			</div>
+       <div class="gallery">
+			<a target="_blank" href="img/sprocketcarrier.jpg">
+			<img src="img/sprocketcarrier.jpg" alt="sprocket carrier"></a>
+			<span class="desc">Prototype cushless drive hubs</span>
+			</div>
+      <div class="gallery">
 			<a target="_blank" href="img/thermostat.jpg">
 			<img src="img/thermostat.jpg" alt="Parts"></a>
 			<span class="desc">Thermostat housing</span>
