--- a/Introduction.html
+++ b/Introduction.html
@@ -138,7 +138,7 @@
 			</div>
           </div>
         
-        Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design. If it exists I’m not interested.
+        Every technical hurdle would spark a spell of research through old textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design. If it exists I’m not interested.
 		That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories. The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics as well as honing my patience. Many engines later and 3 rising rate suspension geometries have taught me a lot
          and testing in the Isle of man has accelerated that rate 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
       <p>
