small wording updates

--- a/Events.html
+++ b/Events.html
@@ -106,16 +106,16 @@
 <br>
 <br>
         <div id="content-background">
-            <div id="title1">Upcoming events 2018</div>
+            <div id="title1">Upcoming events 2019</div>
 
             <div class="main-container">
       <div class="grid-span">
         <h2>The development program</h2>
-        The bike has had a tough few years; typically 11 months of development and just a handful of sessions out on the track for the past 3 years; with frequent frantic machining in that 4 weeks too! So 2018 will be more composed; perhaps using the isle of man race events as a first test was unorthodox? Or maybe I was over optimistic about it's potential. 2018 will be a healthier mix of UK based safe circuits to develop the chassis, experiment with swingarm lengths and monitor cooling characterisitcs as the further engine modifications are installed.
+        The bike has had a tough few years; typically 11 months of development and just a handful of sessions out on the track for the past 4 years; with frequent frantic machining in that 4 weeks too! Perhaps using the isle of man race events as a first test was unorthodox? Or maybe I was over optimistic about it's potential. Nevertheless, there is still plenty of development and testing due for 2019; New air curtain fairings, dual velocity ram air system and the 3rd generation steering and linkage system (lets hope for 3rd time lucky)
       </div>
       <div class="grid-left-two">
         <h2>Club Racing</h2>
-        I tend to enter the club races at the last minute pending succesful fabrications so watch this space for upcoming short circuit races
+        If there's one club race not to miss it's Castle Combe; my favourite in the UK as it has bumps and undulations akin to that of a tame road race circuit
       </div>
       <div class="grid-right-three">
         <h2>Road Racing</h2>
@@ -123,11 +123,11 @@
 	  </div>
       <div class="grid-wide-center">
         <h2>Trackdays</h2>
-        Trackdays and ACU test days tend to be wasteful for this bike. Typical modifications take weeks of machining and fabrication so I tend to be going home early if there's a problem. If I need track time to refine suspension then I'll go for a test day
+        Trackdays tend to be wasteful for this bike. Typical modifications take weeks of machining and fabrication so I tend to be going home early if there's a problem. If I need track time to test suspension components then I'll go for a test day. Aerodynamic tests with tufts and cameras tend to be done on long stretches of private road
       </div>
       <div class="grid-wide-center">
         <h2>Results</h2>
-        The bike has seen many revisions to the chassis and engine over the past 3 years. It has been seriously developed but yet the results have been consistantly poor, most races have been in preservation mode due to severly high engine temperatures. There was only one occasion when everything worked; qualifying in the wet at the southern 100 in 2015. The water spray has a brilliant capability to disspatae heat from the radiators. I was riding around many top flight bikes who were tip toeing around. I managed to qualify mid pack in the superbike race which was pleasing considering at the time I had 100hp less than the front runners.
+        The bike has seen many revisions to the chassis and engine over the past 4 years. It has been seriously developed but yet the results have been consistantly poor, most races have been in preservation mode due to severly high engine temperatures. The most successful occasion when everything worked in harmony was qualifying in the wet at the southern 100 in 2015. The water spray has a brilliant capability to dissapate heat from the radiators. I was riding around many top flight bikes who were tip toeing around. I managed to qualify mid pack in the superbike race which was pleasing considering at the time I had 100hp less than the front runners.
      <div class="image-center-container" width="290px">
 		<div class="banner4">
 		<a target="_blank" href="img/Resultsheet2.jpg">
