--- a/Swingarm.html
+++ b/Swingarm.html
@@ -157,8 +157,8 @@
 		
         <div class="grid-wide-center">
           <h2>The new one</h2>
-          Most of the panels were quite easy to form on my beautiful set of 1950's sheet rollers.
-		  Each panel was mocked up in cardboard, plastercene and bodyfiller to begin with before being cut out of sheet 5083. The formed sections were made using an array of different press tools I constructed for the job.
+          Most of the panels were quite easy to roll on my beautiful set of 1950's sheet rollers.
+		  Each panel was mocked up in cardboard, plastercene and occasionally bodyfiller to begin with before being cut out of sheet 5083. The formed sections were made using an array of different press tools I constructed for the job.
 		  The steel press tools are the best but most expensive and time consuming to make. With a dowel in each corner to guide them together they worked first time.
 		  For the larger top and bottom formed panels I experimented with large concrete moulds which failed spectaculary the first few times; I used my uncle's Manitou as the press which suprisingly wasn't upto it; a 16 tonne machine lifting itself off the ground with my futile 2 foot square concrete press staring back at it without even flinching.
 		  I resorted to some crude agricutural engineering that day; a bucket of spuds dropped at speed with said Manitou. The Manitou just took off quicker, and then the concrete started to crack.
@@ -169,7 +169,7 @@
           <h2>The result</h2>
           The new swingarm is constructed with 5083 sheet throughout purely because it avoids the
           need for post weld heat treatment. Pivot mounts and hub clamp were machined from rolled solid. Cast blocks are easy to obtain but rolled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
-          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adamant in years to come equipment like this will be priceless. 
+          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods (uniformly pre heated to around 150C). The old metalwork equipment is great; solid cast iron. I am adamant in years to come equipment like this will be priceless. 
           </div>
 		  <div class="banner">
 		  <div class="banner2">
